--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,3 +1,3 @@
 <div class="messages" *ngIf="show">
-  {{ messageService.messages[messageService.messages.length - 1] }}
+  {{ messageService.tail() }}
 </div>
