--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
 
 <div class="content" role="main">
   <!-- Footer -->
+  <hr class="footer" />
   <footer>
     Rodrigo Casamayor (alu.89657@usj.es)
   </footer>
