--- a/src/app/list-cars/list-cars.component.css
+++ b/src/app/list-cars/list-cars.component.css
@@ -28,17 +28,12 @@
   background-color: #bbd8dc;
   color: white;
 }
-.cars .badge {
-  display: inline-block;
-  font-size: small;
+
+td:nth-child(5) {
+  text-align: center;
+}
+
+button.delete {
+  background-color: gray !important;
   color: white;
-  padding: 0.8em 0.7em 0 0.7em;
-  background-color: #405061;
-  line-height: 1em;
-  position: relative;
-  left: -1px;
-  top: -4px;
-  height: 1.8em;
-  margin-right: 0.8em;
-  border-radius: 4px 0 0 4px;
 }
